--- a/index.html
+++ b/index.html
@@ -2,186 +2,66 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Грузоперевозки Vladikavkaz ⇄ Moscow</title>
+  <title>3D Земля и Самолёт</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-  
   <style>
+    /* Простые стили для полного экрана */
     body {
       margin: 0;
-      padding: 0;
-      background-color: #f5f5dc;
-      font-family: 'Poppins', sans-serif;
-      color: #333;
       overflow: hidden;
+      background-color: #f5f5dc;
     }
-    .scene-container {
-      position: absolute;
-      top: 0;
-      left: 0;
+    #scene-container {
       width: 100vw;
       height: 100vh;
-    }
-    .weather-box {
-      position: absolute;
-      width: 200px;
-      padding: 15px;
-      background-color: rgba(255, 255, 255, 0.7);
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.15);
-      text-align: center;
-    }
-    .weather-box h2 {
-      margin-top: 0;
-      font-size: 1.3rem;
-      margin-bottom: 5px;
-    }
-    .weather-box p {
-      margin: 0;
-      font-size: 1rem;
-    }
-    .left-box {
-      top: 20px;
-      left: 20px;
-    }
-    .right-box {
-      top: 20px;
-      right: 20px;
-    }
-    footer {
-      position: absolute;
-      bottom: 20px;
-      width: 100%;
-      text-align: center;
-      font-size: 1.2rem;
-      color: #333;
-    }
-    footer p {
-      margin: 5px 0;
+      display: block;
     }
   </style>
 </head>
 <body>
-  <div class="weather-box left-box">
-    <h2>Владикавказ</h2>
-    <p>+5°C, солнечно</p>
-  </div>
-  <div class="weather-box right-box">
-    <h2>Москва</h2>
-    <p>-1°C, облачно</p>
-  </div>
+  <div id="scene-container"></div>
 
-  <div id="scene-container" class="scene-container"></div>
-
-  <footer>
-    <p><strong>Грузоперевозки Владикавказ – Москва</strong></p>
-    <p>Тел: +7 (999) 999-99-99</p>
-  </footer>
-
-  <!-- Подключение Three.js и OrbitControls через CDN -->
+  <!-- Подключаем Three.js и OrbitControls через CDN -->
   <script src="https://unpkg.com/three@0.149.0/build/three.min.js"></script>
   <script src="https://unpkg.com/three@0.149.0/examples/js/controls/OrbitControls.js"></script>
-  
+
   <script>
-    console.log("Запуск скрипта");
+    // Создаем сцену, камеру и рендерер
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.set(0, 0, 3);
 
-    let scene, camera, renderer, controls;
-    let earthMesh, airplane;
-    const clock = new THREE.Clock();
-    const planeSpeed = 0.4;
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.getElementById('scene-container').appendChild(renderer.domElement);
 
-    const moscow = { lat: 55.7558, lon: 37.6173 };
-    const vladikavkaz = { lat: 43.0245, lon: 44.6906 };
+    // Добавляем OrbitControls для управления камерой
+    const controls = new THREE.OrbitControls(camera, renderer.domElement);
+    controls.enableDamping = true;
 
-    init();
-    animate();
+    // Добавляем базовое освещение
+    const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
+    scene.add(ambientLight);
+    const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+    directionalLight.position.set(5, 3, 5);
+    scene.add(directionalLight);
 
-    function init() {
-      console.log("Инициализация сцены");
-      scene = new THREE.Scene();
+    // Загружаем текстуру Земли (надёжный URL)
+    const textureLoader = new THREE.TextureLoader();
+    const earthTexture = textureLoader.load(
+      'https://threejsfundamentals.org/threejs/resources/images/earth-day.jpg',
+      () => { console.log("Текстура Земли загружена"); },
+      undefined,
+      (err) => { console.error("Ошибка загрузки текстуры:", err); }
+    );
 
-      camera = new THREE.PerspectiveCamera(
-        45, 
-        window.innerWidth / window.innerHeight,
-        0.1,
-        1000
-      );
-      camera.position.set(0, 0, 3);
+    // Создаем сферу Земли
+    const earthGeometry = new THREE.SphereGeometry(1, 64, 64);
+    const earthMaterial = new THREE.MeshStandardMaterial({ map: earthTexture });
+    const earth = new THREE.Mesh(earthGeometry, earthMaterial);
+    scene.add(earth);
 
-      renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
-      const container = document.getElementById('scene-container');
-      renderer.setSize(container.clientWidth, container.clientHeight);
-      container.appendChild(renderer.domElement);
-      console.log("Рендерер создан");
-
-      controls = new THREE.OrbitControls(camera, renderer.domElement);
-      controls.enableDamping = true;
-      controls.dampingFactor = 0.1;
-      controls.minDistance = 1.2;
-      controls.maxDistance = 10;
-
-      const dirLight = new THREE.DirectionalLight(0xffffff, 1);
-      dirLight.position.set(5, 3, 5);
-      scene.add(dirLight);
-      const ambientLight = new THREE.AmbientLight(0xffffff, 0.2);
-      scene.add(ambientLight);
-
-      const sphereGeom = new THREE.SphereGeometry(1, 64, 64);
-      const textureLoader = new THREE.TextureLoader();
-      const earthTexture = textureLoader.load(
-        "https://raw.githubusercontent.com/learning-zone/website-templates/master/3D-globe/texture/earth.jpg",
-        () => { console.log("Текстура Земли загружена"); },
-        undefined,
-        (err) => { console.error("Ошибка загрузки текстуры:", err); }
-      );
-      const sphereMat = new THREE.MeshStandardMaterial({
-        map: earthTexture,
-        roughness: 0.8
-      });
-      earthMesh = new THREE.Mesh(sphereGeom, sphereMat);
-      scene.add(earthMesh);
-      console.log("Земля создана");
-
-      const markerGeom = new THREE.SphereGeometry(0.02, 8, 8);
-      const markerMatMoscow = new THREE.MeshBasicMaterial({ color: 0xff0000 });
-      const markerMatVlad = new THREE.MeshBasicMaterial({ color: 0x0000ff });
-
-      const moscowMarker = new THREE.Mesh(markerGeom, markerMatMoscow);
-      moscowMarker.position.copy(latLongToVector3(moscow.lat, moscow.lon, 1.01));
-      earthMesh.add(moscowMarker);
-
-      const vladMarker = new THREE.Mesh(markerGeom, markerMatVlad);
-      vladMarker.position.copy(latLongToVector3(vladikavkaz.lat, vladikavkaz.lon, 1.01));
-      earthMesh.add(vladMarker);
-      console.log("Маркеры городов добавлены");
-
-      const planeGeom = new THREE.ConeGeometry(0.02, 0.06, 8);
-      const planeMat = new THREE.MeshBasicMaterial({ color: 0x333333 });
-      airplane = new THREE.Mesh(planeGeom, planeMat);
-      airplane.rotation.x = Math.PI;
-      earthMesh.add(airplane);
-      console.log("Самолётик добавлен");
-
-      airplane.userData = {
-        from: moscowMarker.position.clone(),
-        to: vladMarker.position.clone(),
-        progress: 0,
-        goingForward: true
-      };
-
-      window.addEventListener('resize', onWindowResize);
-    }
-
-    function onWindowResize() {
-      const container = document.getElementById('scene-container');
-      camera.aspect = container.clientWidth / container.clientHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(container.clientWidth, container.clientHeight);
-    }
-
+    // Функция для перевода геокоординат (широта, долгота) в 3D-координаты на сфере
     function latLongToVector3(lat, lon, radius) {
       const phi = (90 - lat) * (Math.PI / 180);
       const theta = (lon + 180) * (Math.PI / 180);
@@ -191,42 +71,85 @@
       return new THREE.Vector3(x, y, z);
     }
 
-    function moveAirplane(delta) {
-      if (!airplane) return;
-      let data = airplane.userData;
+    // Определяем координаты городов
+    const moscow = { lat: 55.7558, lon: 37.6173 };
+    const vladikavkaz = { lat: 43.0245, lon: 44.6906 };
 
+    // Создаем маркеры городов (небольшие шары)
+    const markerGeometry = new THREE.SphereGeometry(0.02, 8, 8);
+    const moscowMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
+    const vladMaterial = new THREE.MeshBasicMaterial({ color: 0x0000ff });
+
+    const moscowMarker = new THREE.Mesh(markerGeometry, moscowMaterial);
+    moscowMarker.position.copy(latLongToVector3(moscow.lat, moscow.lon, 1.01));
+    earth.add(moscowMarker);
+
+    const vladMarker = new THREE.Mesh(markerGeometry, vladMaterial);
+    vladMarker.position.copy(latLongToVector3(vladikavkaz.lat, vladikavkaz.lon, 1.01));
+    earth.add(vladMarker);
+
+    // Создаем "самолётик" в виде конуса
+    const planeGeometry = new THREE.ConeGeometry(0.02, 0.06, 8);
+    const planeMaterial = new THREE.MeshBasicMaterial({ color: 0x333333 });
+    const airplane = new THREE.Mesh(planeGeometry, planeMaterial);
+    // Поворачиваем конус, чтобы он "смотрел" вперёд
+    airplane.rotation.x = Math.PI;
+    earth.add(airplane);
+
+    // Задаем параметры анимации для самолёта
+    airplane.userData = {
+      from: moscowMarker.position.clone(),
+      to: vladMarker.position.clone(),
+      progress: 0,
+      goingForward: true
+    };
+
+    // Функция анимации самолёта
+    function moveAirplane(delta) {
+      const data = airplane.userData;
       if (data.goingForward) {
-        data.progress += planeSpeed * delta;
+        data.progress += 0.4 * delta;
         if (data.progress >= 1) {
           data.progress = 1;
           data.goingForward = false;
         }
       } else {
-        data.progress -= planeSpeed * delta;
+        data.progress -= 0.4 * delta;
         if (data.progress <= 0) {
           data.progress = 0;
           data.goingForward = true;
         }
       }
-
       const newPos = new THREE.Vector3().lerpVectors(data.from, data.to, data.progress);
       airplane.position.copy(newPos);
-
-      let dir = new THREE.Vector3().subVectors(data.to, data.from).normalize();
-      if (!data.goingForward) {
-        dir.negate();
-      }
-      airplane.lookAt(airplane.position.clone().add(dir));
+      let direction = new THREE.Vector3().subVectors(data.to, data.from).normalize();
+      if (!data.goingForward) direction.negate();
+      airplane.lookAt(airplane.position.clone().add(direction));
     }
 
+    // Главный цикл анимации
+    const clock = new THREE.Clock();
     function animate() {
       requestAnimationFrame(animate);
       const delta = clock.getDelta();
-      earthMesh.rotation.y += 0.001;
       controls.update();
+
+      // Автоматическое вращение Земли
+      earth.rotation.y += 0.001;
+
+      // Обновляем движение самолёта
       moveAirplane(delta);
+
       renderer.render(scene, camera);
     }
+    animate();
+
+    // Обработка изменения размеров окна
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
   </script>
 </body>
 </html>
