--- a/index.html
+++ b/index.html
@@ -2,154 +2,122 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>3D Земля и Самолёт</title>
+  <title>Самолёт на карте</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* Простые стили для полного экрана */
-    body {
+    /* Сброс отступов и установка размеров для body и html */
+    html, body {
       margin: 0;
-      overflow: hidden;
-      background-color: #f5f5dc;
+      padding: 0;
+      height: 100%;
+      width: 100%;
     }
-    #scene-container {
-      width: 100vw;
-      height: 100vh;
-      display: block;
+    /* Контейнер карты с фоновым изображением */
+    .map-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      /* Здесь используется карта России из Wikimedia.
+         При желании можно заменить URL на другой */
+      background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Russia_location_map.svg/1200px-Russia_location_map.svg.png') no-repeat center center;
+      background-size: cover;
+    }
+    /* Стили для маркеров городов */
+    .marker {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background-color: red;
+      border-radius: 50%;
+      border: 2px solid white;
+      transform: translate(-50%, -50%);
+    }
+    /* Второй маркер — другого цвета (например, синий) */
+    .marker.blue {
+      background-color: blue;
+    }
+    /* Стили для элемента с самолётом (используем эмодзи) */
+    .plane {
+      position: absolute;
+      font-size: 24px;
+      transform: translate(-50%, -50%);
     }
   </style>
 </head>
 <body>
-  <div id="scene-container"></div>
-
-  <!-- Подключаем Three.js и OrbitControls через CDN -->
-  <script src="https://unpkg.com/three@0.149.0/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.149.0/examples/js/controls/OrbitControls.js"></script>
+  <div class="map-container" id="map">
+    <!-- Маркер для Москвы (примерно слева сверху) -->
+    <div class="marker" id="moscowMarker" style="left: 30%; top: 30%;"></div>
+    <!-- Маркер для Владикавказа (примерно справа снизу) -->
+    <div class="marker blue" id="vladMarker" style="left: 70%; top: 70%;"></div>
+    <!-- Элемент самолёта; можно заменить эмодзи на картинку, если потребуется -->
+    <div class="plane" id="plane" style="left: 30%; top: 30%;">✈️</div>
+  </div>
 
   <script>
-    // Создаем сцену, камеру и рендерер
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 0, 3);
+    // Получаем ссылки на элементы
+    const map = document.getElementById('map');
+    const plane = document.getElementById('plane');
+    const moscowMarker = document.getElementById('moscowMarker');
+    const vladMarker = document.getElementById('vladMarker');
 
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.getElementById('scene-container').appendChild(renderer.domElement);
-
-    // Добавляем OrbitControls для управления камерой
-    const controls = new THREE.OrbitControls(camera, renderer.domElement);
-    controls.enableDamping = true;
-
-    // Добавляем базовое освещение
-    const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
-    scene.add(ambientLight);
-    const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-    directionalLight.position.set(5, 3, 5);
-    scene.add(directionalLight);
-
-    // Загружаем текстуру Земли (надёжный URL)
-    const textureLoader = new THREE.TextureLoader();
-    const earthTexture = textureLoader.load(
-      'https://threejsfundamentals.org/threejs/resources/images/earth-day.jpg',
-      () => { console.log("Текстура Земли загружена"); },
-      undefined,
-      (err) => { console.error("Ошибка загрузки текстуры:", err); }
-    );
-
-    // Создаем сферу Земли
-    const earthGeometry = new THREE.SphereGeometry(1, 64, 64);
-    const earthMaterial = new THREE.MeshStandardMaterial({ map: earthTexture });
-    const earth = new THREE.Mesh(earthGeometry, earthMaterial);
-    scene.add(earth);
-
-    // Функция для перевода геокоординат (широта, долгота) в 3D-координаты на сфере
-    function latLongToVector3(lat, lon, radius) {
-      const phi = (90 - lat) * (Math.PI / 180);
-      const theta = (lon + 180) * (Math.PI / 180);
-      const x = -radius * Math.sin(phi) * Math.cos(theta);
-      const z = radius * Math.sin(phi) * Math.sin(theta);
-      const y = radius * Math.cos(phi);
-      return new THREE.Vector3(x, y, z);
+    // Функция для получения координат элемента в пикселях относительно контейнера
+    function getCoordinates(element) {
+      // Значения left и top заданы в процентах в inline-стилях
+      const leftPercent = parseFloat(element.style.left);
+      const topPercent = parseFloat(element.style.top);
+      const mapRect = map.getBoundingClientRect();
+      const x = mapRect.width * leftPercent / 100;
+      const y = mapRect.height * topPercent / 100;
+      return { x, y };
     }
 
-    // Определяем координаты городов
-    const moscow = { lat: 55.7558, lon: 37.6173 };
-    const vladikavkaz = { lat: 43.0245, lon: 44.6906 };
+    // Получаем начальную и конечную позицию для движения самолёта
+    const startPos = getCoordinates(moscowMarker);
+    const endPos = getCoordinates(vladMarker);
 
-    // Создаем маркеры городов (небольшие шары)
-    const markerGeometry = new THREE.SphereGeometry(0.02, 8, 8);
-    const moscowMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
-    const vladMaterial = new THREE.MeshBasicMaterial({ color: 0x0000ff });
+    // Параметры анимации
+    let progress = 0;          // 0 - самолёт в Москве, 1 - в Владикавказе
+    let goingForward = true;   // Направление движения
+    const speed = 0.001;       // Скорость (изменяется в зависимости от времени)
+    let lastTime = performance.now();
 
-    const moscowMarker = new THREE.Mesh(markerGeometry, moscowMaterial);
-    moscowMarker.position.copy(latLongToVector3(moscow.lat, moscow.lon, 1.01));
-    earth.add(moscowMarker);
+    // Функция анимации
+    function animate(time) {
+      const delta = time - lastTime;
+      lastTime = time;
 
-    const vladMarker = new THREE.Mesh(markerGeometry, vladMaterial);
-    vladMarker.position.copy(latLongToVector3(vladikavkaz.lat, vladikavkaz.lon, 1.01));
-    earth.add(vladMarker);
-
-    // Создаем "самолётик" в виде конуса
-    const planeGeometry = new THREE.ConeGeometry(0.02, 0.06, 8);
-    const planeMaterial = new THREE.MeshBasicMaterial({ color: 0x333333 });
-    const airplane = new THREE.Mesh(planeGeometry, planeMaterial);
-    // Поворачиваем конус, чтобы он "смотрел" вперёд
-    airplane.rotation.x = Math.PI;
-    earth.add(airplane);
-
-    // Задаем параметры анимации для самолёта
-    airplane.userData = {
-      from: moscowMarker.position.clone(),
-      to: vladMarker.position.clone(),
-      progress: 0,
-      goingForward: true
-    };
-
-    // Функция анимации самолёта
-    function moveAirplane(delta) {
-      const data = airplane.userData;
-      if (data.goingForward) {
-        data.progress += 0.4 * delta;
-        if (data.progress >= 1) {
-          data.progress = 1;
-          data.goingForward = false;
+      // Обновляем параметр прогресса
+      if (goingForward) {
+        progress += speed * delta;
+        if (progress >= 1) {
+          progress = 1;
+          goingForward = false;
         }
       } else {
-        data.progress -= 0.4 * delta;
-        if (data.progress <= 0) {
-          data.progress = 0;
-          data.goingForward = true;
+        progress -= speed * delta;
+        if (progress <= 0) {
+          progress = 0;
+          goingForward = true;
         }
       }
-      const newPos = new THREE.Vector3().lerpVectors(data.from, data.to, data.progress);
-      airplane.position.copy(newPos);
-      let direction = new THREE.Vector3().subVectors(data.to, data.from).normalize();
-      if (!data.goingForward) direction.negate();
-      airplane.lookAt(airplane.position.clone().add(direction));
-    }
 
-    // Главный цикл анимации
-    const clock = new THREE.Clock();
-    function animate() {
+      // Интерполяция координат: линейное перемещение от startPos к endPos
+      const x = startPos.x + (endPos.x - startPos.x) * progress;
+      const y = startPos.y + (endPos.y - startPos.y) * progress;
+
+      // Пересчитываем координаты в процентах относительно размеров контейнера
+      const leftPercent = (x / map.clientWidth) * 100;
+      const topPercent = (y / map.clientHeight) * 100;
+      plane.style.left = leftPercent + '%';
+      plane.style.top = topPercent + '%';
+
       requestAnimationFrame(animate);
-      const delta = clock.getDelta();
-      controls.update();
-
-      // Автоматическое вращение Земли
-      earth.rotation.y += 0.001;
-
-      // Обновляем движение самолёта
-      moveAirplane(delta);
-
-      renderer.render(scene, camera);
     }
-    animate();
+    requestAnimationFrame(animate);
 
-    // Обработка изменения размеров окна
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
+    // При изменении размеров окна позиционирование (с процентами) остается корректным,
+    // поэтому дополнительная обработка не требуется.
   </script>
 </body>
 </html>
